-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8
-
Component/s: javafx
-
Environment:
javafx-sdk8.0.0-ea-b58, Windows 7 x64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8301733 | jfx11.0.19 | Ambarish Rapte | P4 | Resolved | Fixed | b01 |
| JDK-8297555 | 8u371 | Renjith Kannath Pariyangad | P4 | Resolved | Fixed | b03 |
| JDK-8301161 | 8u361 | Ambarish Rapte | P4 | Closed | Fixed | b32 |
Run the attached app. It has File menu which can be opened with Alt+F mnemonics. However it beeps every time this mnemonic is used. This gives an impression that mnemonics is not valid. I believe it should happen.
- backported by
-
JDK-8297555 Menu beeps when mnemonics is used
-
- Resolved
-
-
JDK-8301733 Menu beeps when mnemonics is used
-
- Resolved
-
-
JDK-8301161 Menu beeps when mnemonics is used
-
- Closed
-
- relates to
-
JDK-8094301 Scene Builder menus should have mnemonics
-
- Resolved
-
(2 links to)