8089986: Menu beeps when mnemonics is used

Reviewed-by: kcr, pbansal